fixed font size pushing buttons out of container

--- a/styles/bank_hack.css
+++ b/styles/bank_hack.css
@@ -87,7 +87,7 @@ input[type=submit]:hover {
 .middleText.fail {
 	margin-top: min(20vw, 30vh);
 	margin-bottom: 0;
-	font-size: max(2vw, 20px);
+	font-size: max(1.8vw, 20px);
 }
 
 #timerSection {
